# data-tools

./: .gitignore  README.md
json2parquet/: Cargo.toml  json2parquet.py
json2parquet/example/: sample.json
json2parquet/src/: extract_json.rs  extracter_file.rs  loader_s3.rs  main.rs  reader_json.rs  writer_parquet.rs
