[package]
name = "json2parquet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "13.0.0"
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
clap = "2"
parquet = "13.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
